# Jellyfish

./: .gitattributes  CMakeLists.txt  README.md
JellyfishCMD/: CMakeLists.txt  interface.cpp  interface.hpp  main.cpp
JellyfishCMD/include/: Core.hpp
JellyfishCMD/include/NodeSystem/: node.hpp
JellyfishCore/: CMakeLists.txt  Core.cpp  Core.hpp  Project.cpp  Project.h  Utils.cpp  Utils.h
JellyfishCore/include/: Connection.h  uuid.h
JellyfishCore/include/NodeSystem/: node.hpp  plugin_node_manager.hpp  registry.hpp
JellyfishCore/include/PluginSystem/: iinfo.hpp  iplugin.hpp  plugins.hpp  shared_library.hpp  storage.hpp  task parallel old.hpp  task.hpp  tasks.hpp
JellyfishGUI/: CMakeLists.txt  icons.qrc  main.cpp
JellyfishGUI/Nodeeditor/: LICENSE.rst
JellyfishGUI/Nodeeditor/src/: ConnectionBlurEffect.cpp  ConnectionGraphicsObject.cpp  ConnectionGraphicsObject.hpp  ConnectionPainter.cpp  ConnectionPainter.hpp  ConnectionState.cpp  ConnectionState.hpp  ConnectionStyle.cpp  ConnectionStyle.hpp  FlowScene.cpp  FlowScene.hpp  FlowView.cpp  FlowView.hpp  FlowViewStyle.hpp  GUIConnection.cpp  GUIConnection.hpp  GUINode.cpp  GUINode.hpp  NodeConnectionInteraction.cpp  NodeConnectionInteraction.hpp  NodeGraphicsObject.cpp  NodeGraphicsObject.hpp  NodePainter.cpp  NodePainter.hpp  NodePainterDelegate.hpp  NodeStyle.hpp  Properties.hpp  TypeConverter.hpp
JellyfishGUI/gui/: NodeTypeListDock.cpp  NodeTypeListDock.h  maintabwidget.cpp  maintabwidget.h  maintoolbar.cpp  maintoolbar.h  mainwindow.cpp  mainwindow.h  nodeinspector.cpp  nodeinspector.h  projecttab.cpp  projecttab.h  styles.h
JellyfishGUI/include/: Core.hpp
JellyfishGUI/include/NodeSystem/: node_datatype.hpp
Plugins/Basics/: CMakeLists.txt  plugin.cxx  save_load.cpp  save_load.h
Plugins/Basics/Lib/header/: CIS.h  QuEST_test.h  configuration_interaction.h  configuration_interaction_dipole_moment.h  configuration_interaction_one_electron_operator.h  hartree_fock_closed_shell.h  hartree_fock_closed_shell_dipole_moment.h  integrator_gaussian_potential_gaussian.h  integrator_libcint_interface_2e.h  integrator_operator_function_numerical.h  laser.h  nuclear_dipole_moment.h  one_electron_system.h  one_electron_system_dipole_moment.h  operator_function.h  pointcharge_energy.h  potential_gaussian.h  propagator.h  propagator_matrixexponential.h  read_molecule.h  single_particle_transition_density_matrix.h  td_hamiltonian.h  td_hamiltonian_molecular.h  transformation_integrals_hforbitals_to_spinorbitals.h
Plugins/Basics/Lib/src/: CIS.cpp  configuration_interaction.cpp  configuration_interaction_dipole_moment.cpp  configuration_interaction_one_electron_operator.cpp  gaussian_basisfunction.cpp  hartree_fock_closed_shell.cpp  hartree_fock_closed_shell_dipole_moment.cpp  integrator_gaussian_potential_gaussian.cpp  integrator_libcint_interface_1e.cpp  integrator_libcint_interface_2e.cpp  integrator_operator_function_numerical.cpp  laser.cpp  nuclear_dipole_moment.cpp  one_electron_system.cpp  one_electron_system_dipole_moment.cpp  operator_function.cpp  pointcharge_energy.cpp  potential_gaussian.cpp  propagator.cpp  propagator_matrixexponential.cpp  read_molecule.cpp  single_particle_transition_density_matrix.cpp  td_hamiltonian_molecular.cpp  transformation_integrals_hforbitals_to_spinorbitals.cpp
Plugins/Basics/Nodes/CIEnergyCAPNode/: CIEnergyCAPNode.cpp  CIEnergyCAPNode.hpp
Plugins/Basics/Nodes/CombineBasissetsNode/: CombineBasissetsNode.cpp  CombineBasissetsNode.hpp
Plugins/Basics/Nodes/CombineOneElectronIntegralsNode/: CombineOneElectronIntegralsNode.cpp  CombineOneElectronIntegralsNode.hpp
Plugins/Basics/Nodes/ConfigurationInteractionNode/: ConfigurationInteractionNode.cpp  ConfigurationInteractionNode.hpp
Plugins/Basics/Nodes/CreateEvenTemperedBasissetNode/: CreateEvenTemperedBasissetNode.cpp  CreateEvenTemperedBasissetNode.hpp
Plugins/Basics/Nodes/CreateGaussPotentialNode/: CreateGaussPotentialNode.cpp  CreateGaussPotentialNode.hpp
Plugins/Basics/Nodes/EvaluateNTONode/: EvaluateNTONode.cpp  EvaluateNTONode.hpp  evaluate_ntos_window.cpp  evaluate_ntos_window.h
Plugins/Basics/Nodes/GaussPotentialIntegralsNode/: GaussPotentialIntegralsNode.cpp  GaussPotentialIntegralsNode.hpp
Plugins/Basics/Nodes/InputElectronNumberNode/: InputElectronNumberNode.cpp  InputElectronNumberNode.hpp
Plugins/Basics/Nodes/IntegralsTransformationToHFNode/: IntegralsTransformationToHFNode.cpp  IntegralsTransformationToHFNode.hpp
Plugins/Basics/Nodes/IntegralsTransformationToSpinNode/: IntegralsTransformationToSpinNode.cpp  IntegralsTransformationToSpinNode.hpp
Plugins/Basics/Nodes/OneElectronIntegralsNode/: OneElectronIntegralsNode.cpp  OneElectronIntegralsNode.hpp
Plugins/Basics/Nodes/OneElectronPotentialIntegralsNode/: OneElectronPotentialIntegralsNode.cpp  OneElectronPotentialIntegralsNode.hpp
Plugins/Basics/Nodes/PointchargeEnergyNode/: PointchargeEnergyNode.cpp  PointchargeEnergyNode.hpp
Plugins/Basics/Nodes/PropagatorNode/: PropagatorNode.cpp  PropagatorNode.hpp  td_wf_analysis.cpp  td_wf_analysis.h
Plugins/Basics/Nodes/PulsedLaserNode/: PulsedLaserNode.cpp  PulsedLaserNode.hpp  plot_laser.cpp  plot_laser.h
Plugins/Basics/Nodes/ReadMoleculeNode/: ReadMoleculeNode.cpp  ReadMoleculeNode.hpp
Plugins/Basics/Nodes/RestrictedHartreeFockNode/: RestrictedHartreeFockNode.cpp  RestrictedHartreeFockNode.hpp
Plugins/Basics/Nodes/SolveOneElectronSystemNode/: SolveOneElectronSystemNode.cpp  SolveOneElectronSystemNode.hpp
Plugins/Basics/Nodes/SpartialCAPNode/: SpartialCAPNode.cpp  SpartialCAPNode.hpp
Plugins/Basics/Nodes/TransitionDipoleMomentsCINode/: TransitionDipoleMomentsCINode.cpp  TransitionDipoleMomentsCINode.hpp  get_transitions.cpp  get_transitions.h
Plugins/Example/: CMakeLists.txt  plugin.cxx  testnode.cpp  testnode.hpp  testnode2.cpp  testnode2.hpp
Plugins/OrcaInterface/: CMakeLists.txt  plugin.cxx  save_load.cpp  save_load.h
Plugins/QuantumComputing/: CMakeLists.txt  plugin.cxx  save_load.cpp  save_load.h
Plugins/Visualization/: CMakeLists.txt  plugin.cxx
Plugins/Visualization/Lib/gui/: Grid.h  (+13 more)
(+94 files in other folders)
