cmake_minimum_required (VERSION 3.8)

project ("Jellyfish")
add_subdirectory ("JellyfishCore")
add_subdirectory ("JellyfishCMD")
add_subdirectory ("JellyfishGUI")
add_subdirectory ("Plugins/Basics")
add_subdirectory ("Plugins/OrcaInterface")
add_subdirectory ("Plugins/Visualization")
add_subdirectory ("Plugins/QuantumComputing")